# ssh-cli-tools

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.rst  INSTALLING.md  README.md  README.rst  open-a8-cli  requirements.txt  setup.cfg  setup.py  tox.ini
iotlabsshcli/: __init__.py  open_a8.py
iotlabsshcli/parser/: __init__.py  open_a8.py  open_a8_parser.py
iotlabsshcli/sshlib/: __init__.py  fabric_ssh.py  open_a8_ssh.py  ssh_config
iotlabsshcli/tests/: __init__.py  compat.py  iotlabsshcli_mock.py  open_a8_parser_test.py  open_a8_ssh_test.py  open_a8_test.py
tests_utils/: COPYING_HEADER  check_license.sh  test-requirements.txt
utils/: README.md  iotlabsshcli-bash-completion.sh
