[tool:pytest]
addopts =
    -v
    --doctest-modules
    --cov=iotlabsshcli
    --cov-report term-missing
testpaths = iotlabsshcli

[lint]
lint-reports = no
lint-disable = locally-disabled,star-args,bad-option-value
lint-msg-template = {path}:{line}: [{msg_id}({symbol}), {obj}] {msg}

[pep8]
exclude = *.egg,.tox

[flake8]
ignore = C901
exclude = .tox,dist,doc,build,*.egg
max-complexity = 6

[metadata]
description-file = README.rst
